# rules_sxproto

./: .bazelrc  MODULE.bazel  README.md
.github/workflows/: test_bazel.yaml
example/: BUILD.bazel  intro_5_array.sxpb  popcorn.sxpb  sauces.sxpb
src/: BUILD.bazel  binaryproto2sxproto_main.cc  protobuf_transcode.cc
sxproto/: defs.bzl
test/depend/: BUILD.bazel  shopping.sxpb  task.sxpb
test/example/: json_camel_case_test.fildesh  json_snake_case_test.fildesh  nonempty_test.fildesh  protoc_txtpb_test.fildesh
test/loneof/: BUILD.bazel  travel.sxpb
test/manyof/: BUILD.bazel  boolexpr.sxpb  boolexpr.yaml
tool/: BUILD.bazel
