load("@rules_proto//proto:defs.bzl", "proto_library")
load(
    "//sxproto:defs.bzl",
    "protobuf_equality_test",
    "sxproto_data",
)

proto_library(
    name = "travel_proto",
    testonly = True,
    srcs = ["travel.proto"],
)

sxproto_data(
    name = "travel_sxproto_data",
    testonly = True,
    src = "travel.sxpb",
    out_json = "travel_sxproto_data.json",
    out_textproto = "travel_sxproto_data.txtpb",
    proto_deps = [":travel_proto"],
    proto_message = "sxproto.test.loneof.Travel",
)

protobuf_equality_test(
    name = "travel_textproto_equality_test",
    srcs = [
        "travel.txtpb",
        ":travel_sxproto_data",
    ],
    proto_deps = [":travel_proto"],
    proto_message = "sxproto.test.loneof.Travel",
)

protobuf_equality_test(
    name = "travel_json_equality_test",
    srcs = [
        "travel.json",
        ":travel_sxproto_data",
    ],
    proto_deps = [":travel_proto"],
    proto_message = "sxproto.test.loneof.Travel",
)
