load("@fildesh//tool/bazel:cmptxt_test.bzl", "cmptxt_test")
load("@rules_proto//proto:defs.bzl", "proto_library")
load(
    "//sxproto:defs.bzl",
    "data_json",
    "data_json_camelcase",
    "data_sxproto",
    "data_textproto",
    "json_data",
    "protobuf_equality_test",
    "sxproto_data",
    "textproto_data",
)

proto_library(
    name = "boolexpr_proto",
    testonly = True,
    srcs = ["boolexpr.proto"],
)

sxproto_data(
    name = "boolexpr_sxproto_data",
    testonly = True,
    src = "boolexpr.sxpb",
    out_json = "boolexpr_sxproto_data.json",
    out_textproto = "boolexpr_sxproto_data.txtpb",
    out_yaml = "boolexpr_sxproto_data.yaml",
    proto_deps = [":boolexpr_proto"],
    proto_message = "sxproto.test.manyof.BooleanExpressionList",
)

textproto_data(
    name = "boolexpr_textproto_data",
    testonly = True,
    src = "boolexpr.txtpb",
    proto_deps = [":boolexpr_proto"],
    proto_message = "sxproto.test.manyof.BooleanExpressionList",
)

json_data(
    name = "boolexpr_json_data",
    testonly = True,
    src = "boolexpr.json",
    proto_deps = [":boolexpr_proto"],
    proto_message = "sxproto.test.manyof.BooleanExpressionList",
)

protobuf_equality_test(
    name = "boolexpr_sxproto_equality_test",
    srcs = [
        "boolexpr.sxpb",
        ":boolexpr_textproto_data",
    ],
    proto_deps = [":boolexpr_proto"],
    proto_message = "sxproto.test.manyof.BooleanExpressionList",
)

protobuf_equality_test(
    name = "boolexpr_textproto_equality_test",
    srcs = [
        "boolexpr.txtpb",
        ":boolexpr_sxproto_data",
    ],
    proto_deps = [":boolexpr_proto"],
    proto_message = "sxproto.test.manyof.BooleanExpressionList",
)

protobuf_equality_test(
    name = "boolexpr_json_equality_test",
    srcs = [
        "boolexpr.json",
        ":boolexpr_sxproto_data",
    ],
    proto_deps = [":boolexpr_proto"],
    proto_message = "sxproto.test.manyof.BooleanExpressionList",
)

data_sxproto(
    name = "boolexpr_data_sxproto",
    testonly = True,
    src = ":boolexpr_sxproto_data",
    proto_deps = [":boolexpr_proto"],
    proto_message = "sxproto.test.manyof.BooleanExpressionList",
)

data_textproto(
    name = "boolexpr_data_textproto",
    testonly = True,
    src = ":boolexpr_sxproto_data",
    proto_deps = [":boolexpr_proto"],
    proto_message = "sxproto.test.manyof.BooleanExpressionList",
)

data_json(
    name = "boolexpr_data_json",
    testonly = True,
    src = ":boolexpr_sxproto_data",
    proto_deps = [":boolexpr_proto"],
    proto_message = "sxproto.test.manyof.BooleanExpressionList",
)

protobuf_equality_test(
    name = "boolexpr_data_sxproto_equality_test",
    srcs = [
        ":boolexpr_data_sxproto",
        ":boolexpr_textproto_data",
    ],
    proto_deps = [":boolexpr_proto"],
    proto_message = "sxproto.test.manyof.BooleanExpressionList",
)

protobuf_equality_test(
    name = "boolexpr_data_textproto_equality_test",
    srcs = [
        ":boolexpr_data_textproto",
        ":boolexpr_sxproto_data",
    ],
    proto_deps = [":boolexpr_proto"],
    proto_message = "sxproto.test.manyof.BooleanExpressionList",
)

protobuf_equality_test(
    name = "boolexpr_data_json_equality_test",
    srcs = [
        ":boolexpr_data_json",
        ":boolexpr_sxproto_data",
    ],
    proto_deps = [":boolexpr_proto"],
    proto_message = "sxproto.test.manyof.BooleanExpressionList",
)

cmptxt_test(
    name = "boolexpr_data_yaml_equality_test",
    srcs = [
        "boolexpr_sxproto_data.yaml",
        ":boolexpr.yaml",
    ],
)
